fixes for i18n and search bar align

--- a/src/themes/omikk/app/home-page/home-news/home-news.component.scss
+++ b/src/themes/omikk/app/home-page/home-news/home-news.component.scss
@@ -15,6 +15,7 @@
   //background-color: #1F3F5E;
   padding: 10px 0px 3px 0px !important;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 a {
